changed web output for issue# about dns, the DB info still is good/bad. will be changed later on

--- a/web/templates/tables.html
+++ b/web/templates/tables.html
@@ -21,11 +21,10 @@
                     {% if res.good != '-' %}
                         <b>{{res.rdns}} </b>is  
                         {% if res.good == 'good' -%}
-                            <font color='green'>
+                        <font color='green'><b>Forward-confirmed</b>
                         {% else -%}
-                            <font color='#8B0000'>
+                        <font color='#8B0000'><b>unconfirmed</b>
                         {% endif -%}
-                        <b> {{ res.good }}</b>
                             </font>
                     {% endif -%}
                 {% endif -%}
