--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -44,8 +44,9 @@ users with 2+ IP's
 <div id="roundbar-grey">
     <ul>
         <li class="active"><a href="/ssh_rank/lists/all">{All Time</a></li>
-        <li class="active"><a href="/ssh_rank/lists/week">7 days</a></li>
-        <li class="active"><a href="/ssh_rank/lists/30day">30 days}</a></li>
+        <li class="active"><a href="/ssh_rank/lists/30day">30d</a></li>
+        <li class="active"><a href="/ssh_rank/lists/week">7d</a></li>
+        <li class="active"><a href="/ssh_rank/lists/24hr">24hr}</a></li>
         <li class="active"><a href="/ssh_rank/users/letter">{All Users</a></li>
         <li class="active"><a href="/ssh_rank/users/attempts">Users/Total</a></li>
         <li class="active"><a title="This page is going to be slow loading" href="/ssh_rank/user2p">Users/#of IPs}</a></li>
