--- a/web/templates/user_info.html
+++ b/web/templates/user_info.html
@@ -1,4 +1,6 @@
 {% include 'header.html' %}
+<meta name="robots" content="noindex">
+
 <h3>{{user}}</h3>
 <p><a href="/ssh_rank/tree/user/{{ user}}"> tree for {{ user}} </a>
 <p>IP's that have used this user name:</p>
