--- a/web/templates/footer.html
+++ b/web/templates/footer.html
@@ -1,7 +1,7 @@
 </div>
 <div id="footer">
     <a target="_blank" href="https://pronto185.com">a pronto creation!</a>
-| see your own IP on this list? want it gone? email devnull@pronto185.com
+<br>| see your own IP on this list? want it gone? email devnull@pronto185.com
 
 </div>
 </body>
