--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -36,6 +36,8 @@ List of all attempted users
 Tree list for {{ ip }}{{ user}}
 {% elif subhead == '2pip' %}
 users with 2+ IP's
+{% elif subhead == 'port search' -%}
+port search: {{num}}
 {% else -%}
 404'd
 {% endif %}
@@ -55,4 +57,4 @@ users with 2+ IP's
     </ul>
 </div>
 <div id="box">
-<p id='noticebox' align=center>note: you might have to ctrl-F5 to update the CSS</p>
+    <p id='noticebox' align=center>notice: <a href="https://duckduckgo.com/tty/#q=celery">Celery</a> is tasty.</p>
