lots of changes to webstuff, nmap/screenshot, formatting etc...

--- a/web/templates/footer.html
+++ b/web/templates/footer.html
@@ -1,8 +1,14 @@
 </div>
 <div id="footer">
     <a target="_blank" href="https://pronto185.com">a pronto creation!</a>
-<br>| see your own IP on this list? want it gone? email devnull@pronto185.com
+<br>see your own IP on this list? want it gone? email devnull@pronto185.com
+<br> <img src="{{ url_for('static', filename='netscape3.gif')}} "> </div>
+<!--
+    _o      /\_    _ \\o   (_)\__/o   (_)
+  _< \_    _>(_)  (_)/<_     \_| \    _|/' \/
+ (_)>(_)  (_)         (_)    (_)     (_)'  _\o_  
+-->
 
-</div>
+</code>
 </body>
 </html>
